fixed spacing on usernav bar

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -155,6 +155,7 @@ img {
   text-align: center;
   padding-top: 25px;
   padding-left: 0px;
+  padding-right: 0px;
 }
 
 #usernav-text,
@@ -184,6 +185,7 @@ img {
 #army {
   position: relative;
   bottom: 8px;
+  padding-left: 40px;
 }
 
 #user-level .level {
@@ -846,6 +848,10 @@ footer{
     margin: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
+    padding-left: 0px;
+  }
+
+  #army {
     padding-left: 0px;
   }
 
